--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Wobbegong (Development)</title>
+		<link rel = "icon" href = 
+"https://preview.redd.it/rk4v1qcbiqz41.png?width=500&format=png&auto=webp&s=16dc5860b7979f866385d7904fbb4a2be70c50ea" 
+        type = "image/x-icon">
 	</head>
 	<body>
 		<!-- <h1>HELLO WORLD!</h1> -->
